--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,50 @@
 /* Write your CSS here! */
+body {
+    color: rgb(0, 0, 0);
+    background-color: rgb(42, 141, 158);
+    font-size: 150%;
+    font-family: 'Times New Roman', Times, serif;
+    margin-top: 0px;
+    margin-bottom: 50px;
+    margin-right: 100px;
+    margin-left: 50px;
+ }
+
+h3 {
+    color: rgb(175, 187, 8);
+}
+
+p {
+    margin-top: 0px;
+    margin-bottom: 50px;
+    margin-right: 100px;
+    margin-left: 50px;
+  }
+
+img{
+    padding-top: 0px;
+    padding-bottom: 0px;
+    padding-right: 100px;
+    padding-left: 50px;
+  }
+
+#mainHeading {
+    font-family: Arial, Helvetica, sans-serif;
+}
+#testP{
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif
+}
+.headingThree{
+    font-family: 'Courier New', Courier, monospace;
+}
+
+.funParagraph{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+
+
+
+
+
+
